# rust-mini-fortune-cookies

./: Cargo.toml  README.md
src/: main.rs
