[package]
name = "fortune-cookies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.23"
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.11.3"
serde_json = "1.0.64"